--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/hrms
 spring.datasource.username=postgres
 spring.datasource.password=a1a2a3
 spring.jpa.properties.javax.persistence.validation.mode = none
+
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
